[metadata]
name = spacemake-mjens
version = 0.0.1
author = Nikolaos Karaiskos  Tamás Sztanka-Tóth  Marvin Jens
author_email = TamasRyszard.Sztanka-Toth@mdc-berlin.de
description = A bioinformatic pipeline for the analysis of spatial transcriptomic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rajewsky-lab/spacemake
project_urls =
    Bug Tracker = https://github.com/rajewsky-lab/spacemake/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
zip_safe = False
python_requires = >=3.6
include_package_data = True
package_dir =
    spacemake = spacemake
packages = spacemake
scripts =
    spacemake/bin/clean_top_barcodes.py
    spacemake/bin/create_sample_db.R
    spacemake/bin/create_sample_overview.Rmd
    spacemake/bin/fix_bam_header.py
    spacemake/bin/parse_ribo_log.py
    spacemake/bin/split_reads_by_strand_info.py

[options.package_data]
spacemake = 
    snakemake/*.smk
    data/*.csv
    config/*.yaml

# [options.data_files]
# snakemake = spacemake/snakemake/dropseq.smk

[options.entry_points]
console_scripts = 
    alnstats = spacemake.alnstats:cmdline
    preprocess = spacemake.preprocess:cmdline
    spacemake = spacemake.smk:cmdline
