[metadata]
name = spacemake
version = attr: spacemake.contrib.__version__
author = Tamas Ryszard Sztanka-Toth, Marvin Jens, Nikos Karaiskos, Nikolaus Rajewsky 
author_email = TamasRyszard.Sztanka-Toth@mdc-berlin.de
description = A bioinformatic pipeline for the analysis of spatial transcriptomic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rajewsky-lab/spacemake
project_urls =
    Bug Tracker = https://github.com/rajewsky-lab/spacemake/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
license = GPL

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
package_dir =
    spacemake = spacemake
packages = spacemake

[options.package_data]
spacemake = 
    snakemake/*.smk
    snakemake/scripts/*.R
    snakemake/scripts/*.Rmd
    snakemake/scripts/*.py
    data/*.csv
    data/*.fa
    config/*.yaml
    longread/*.py

[options.entry_points]
console_scripts = 
    alnstats = spacemake.alnstats:cmdline
    preprocess = spacemake.preprocess:cmdline
    spacemake = spacemake.cmdline:cmdline
    pb_annotate = spacemake.longread.cmdline:cmdline

[tool:pytest]
testpaths = tests
markers = 
    big_download: needs to download large-ish files
addopts = --cov=spacemake --cov-report html
